# solana_smart_wallet_monitor

./: .env  Cargo.toml  README.md  keypair.json  wallet.txt
src/: arbitrage_detection.rs  copy_trading.rs  large_transaction.rs  large_transaction_subscription.rs  main.rs  smart_wallet.rs  utils.rs
